--- a/weekend.mdx
+++ b/weekend.mdx
@@ -6,7 +6,7 @@ tags: ['next.js','nextjs','stuff']
 
 <Video id="8bTaJ3PMGR4" />
 
-# Hello!
+# Hello!!
 
 We recommend using **Static Generation** (with and without data) whenever possible because your page can be built once and served by CDN, which makes it much faster than having a server render the page on every request.
 
